# kindra

./: pyproject.toml
notebooks/: scratch.ipynb
src/kindra/: __init__.py  constants.py  kindle.py
