[project]
name = "kindra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hanne", email = "hannehoitzing@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "polars>=1.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
