[project]
name = "kindra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hanne", email = "hannehoitzing@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "genanki>=0.13.1",
    "jupyterlab>=4.4.1",
    "openai>=1.77.0",
    "polars>=1.29.0",
    "pyarrow>=20.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
